--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,16 @@ body {
   margin-block: 15px;
 }
 
-h2, h3, h4, p {
+h2,
+h3,
+h4,
+p {
   margin: 0;
 }
 
 ul {
   list-style: none;
+  margin-block: 0;
 }
 
 a {
@@ -19,6 +23,12 @@ a {
 button {
   border: none;
   background: none;
+}
+
+span {
+  font-size: 16px;
+  font-weight: 500;
+  color: #544837;
 }
 
 .container {
@@ -41,7 +51,7 @@ button {
   .buttons {
     display: flex;
     gap: 14px;
-    
+
     button {
       font-family: Poppins, sans-serif;
       font-size: 16px;
@@ -74,14 +84,14 @@ button {
     font-weight: bold;
     line-height: 54px;
     color: #2F281E;
-    margin-bottom: 16px; 
-    }
+    margin-bottom: 16px;
+  }
 
   p {
     font-size: 18px;
     font-weight: 400;
     line-height: 28px;
-    color: #544837; 
+    color: #544837;
     margin-top: 30px;
     margin-bottom: 45px;
   }
@@ -103,6 +113,7 @@ button {
       font-weight: 700;
       background: #FF9900;
       color: #FFFFFF;
+      border-radius: 4px;
     }
 
     :last-child {
@@ -139,35 +150,192 @@ button {
     display: flex;
     text-align: left;
     justify-content: space-between;
-    
+
     li {
       max-width: 240px;
-      
+
       h4 {
-      font-size: 22px;
-      font-weight: 600;
-      color: #2F281E;
-      margin-block: 30px 13px;
+        font-size: 22px;
+        font-weight: 600;
+        color: #2F281E;
+        margin-block: 30px 13px;
       }
     }
-      p {
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 26px;
-        color: #544837
-      }
-    }
-    
-    button {
-      align-items: center;
+
+    p {
       font-size: 16px;
-      font-weight: 600;
-      background: #FF9900;
-      color: #FFFFFF;
-      margin-top: 34px;
-      width: 175px;
-      height: 53px;
+      font-weight: 500;
+      line-height: 26px;
+      color: #544837
     }
   }
-  
+
+  button {
+    align-items: center;
+    font-size: 16px;
+    font-weight: 600;
+    background: #FF9900;
+    color: #FFFFFF;
+    margin-top: 34px;
+    width: 175px;
+    height: 53px;
+    border-radius: 4px;
+  }
+}
+
+.professionals {
+  display: flex;
+  margin-top: 120px;
+  align-items: center;
+
+  .content {
+    margin-right: 104px;
+
+    h2 {
+      font-size: 36px;
+      font-weight: 700;
+      color: #2F281E;
+      margin-block: 3px 22px;
+    }
+
+    p {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 26px;
+      color: #544837;
+      margin-bottom: 30px;
+    }
+
+    #pr-p1 {
+      margin-bottom: 25px;
+    }
+
+    h3 {
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 26px;
+      color: #2F281E;
+      margin-bottom: 12px;
+    }
+  }
+}
+
+.managers {
+  display: flex;
+  gap: 100px;
+  align-items: center;
+  margin-top: 101px;
+
+  h2 {
+    font-size: 36px;
+    font-weight: 700;
+    color: #2F281E;
+    padding-bottom: 22px;
+  }
+
+  .manager-list {
+    list-style-image: url("images/icon-list-managers.svg");
+
+    li {
+      padding-top: 30px;
+    }
+  }
+}
+
+.marketers {
+  display: flex;
+  align-items: center;
+  margin-top: 104px;
+  gap: 82px;
+
+  h2 {
+    font-size: 36px;
+    font-weight: 700;
+    color: #2F281E;
+    margin-bottom: 22px;
+    margin-top: 3px;
+  }
+
+  h3 {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 26px;
+    color: #2F281E;
+    padding-bottom: 12px;
+  }
+
+  p {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 26px;
+    color: #544837;
+    padding-bottom: 25px;
+  }
+
+  .mark-p1 {
+    padding-bottom: 30px;
+  }
+}
+
+hr {
+  margin-top: 146px;
+  margin-bottom: 102px;
+  border: none;
+  height: 1px;
+  background: #BCD0E5;
+}
+
+.footer {
+  display: flex;
+  margin-bottom: 83px;
+
+
+  >:nth-child(2) {
+    padding-left: 126px;
+    padding-right: 129px;
+  }
+
+  >:nth-child(3) {
+    padding-right: 129px;
+    padding-left: 0;
+  }
+
+  img {
+    width: 185px;
+    height: 32px;
+  }
+
+  ul {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 35px;
+    color: #544837;
+    padding-top: 65px;
+  }
+
+  form {
+    display: flex;
+    padding-top: 65px;
+    flex-wrap: wrap;
+    align-items: flex-end;
+
+    input {
+      width: 100%;
+      height: 48px;
+      border: 1px solid #BCD0E5;
+      border-radius: 4px;
+      color: #FFFFFF;
+      padding: 0 0 21px;
+    }
+
+    button {
+      width: 131px;
+      height: 39px;
+      background: #FF9900;
+      color: #FFFFFF;
+      font-size: 16px;
+      font-weight: 700;
+      border-radius: 4px;
+    }
+  }
 }
