--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body {
   font-family: Poppins, sans-serif;
   margin-block: 15px;
@@ -238,6 +239,13 @@ span {
 
     li {
       padding-top: 30px;
+      padding-left: 30px;
+      vertical-align: middle;
+
+      span {
+        position: relative;
+        top: -22px;
+      }
     }
   }
 }
@@ -288,7 +296,7 @@ hr {
 .footer {
   display: flex;
   margin-bottom: 83px;
-
+align-items: flex-end;
 
   >:nth-child(2) {
     padding-left: 126px;
@@ -303,6 +311,7 @@ hr {
   img {
     width: 185px;
     height: 32px;
+    align-self: flex-start;
   }
 
   ul {
@@ -318,6 +327,7 @@ hr {
     padding-top: 65px;
     flex-wrap: wrap;
     align-items: flex-end;
+    width: 325px;
 
     input {
       width: 100%;
@@ -325,7 +335,6 @@ hr {
       border: 1px solid #BCD0E5;
       border-radius: 4px;
       color: #FFFFFF;
-      padding: 0 0 21px;
     }
 
     button {
@@ -336,6 +345,7 @@ hr {
       font-size: 16px;
       font-weight: 700;
       border-radius: 4px;
+      margin-top: 21px;
     }
   }
 }
