--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Poppins, sans-serif;
   margin-block: 15px;
@@ -190,7 +189,7 @@ span {
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    
+
 
   }
 }
@@ -297,48 +296,77 @@ span {
 }
 
 hr {
-  margin-top: 146px;
-  margin-bottom: 102px;
   border: none;
   height: 1px;
   background: #BCD0E5;
+  margin-top: 100px;
+  margin-bottom: 70px;
+}
+
+@font-face {
+  font-family: 'Gotham-bold';
+  /* Назва, яку ви будете використовувати */
+  src: local('Gotham-bold'),
+    /* Перевірка на наявність на комп'ютері */
+    url('fonts/Gotham Bold.otf');
+  font-weight: bold;
+  /* або інше значення: bold, 100-900 */
+  font-style: normal;
+  /* або italic */
 }
 
 .footer {
   display: flex;
-  margin-bottom: 83px;
-align-items: flex-end;
-
-  >:nth-child(2) {
-    padding-left: 126px;
-    padding-right: 129px;
-  }
-
-  >:nth-child(3) {
-    padding-right: 129px;
-    padding-left: 0;
-  }
+  margin-bottom: 70px;
+  justify-content: space-between;
 
   img {
-    width: 185px;
+    width: 200px;
     height: 32px;
-    align-self: flex-start;
   }
 
   ul {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
     font-size: 16px;
-    font-weight: 400;
-    line-height: 35px;
+    line-height: 26px;
     color: #544837;
-    padding-top: 65px;
+    padding: 0;
+    width: 135px;
+    display: inline-flex;
+    flex-direction: column;
+
+    .list-child {
+      justify-content: space-between;
+      height: 149px;
+    }
+
+    a {
+      font-size: 16px;
+      line-height: 26px;
+    }
+  }
+
+  h5 {
+    font-family: 'Gotham-bold', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    color: #2F281E;
+    padding: 0;
+    margin: 0;
+  }
+
+  .title-list {
+    padding-bottom: 30px;
   }
 
   form {
     display: flex;
-    padding-top: 65px;
+    /* padding-top: 65px; */
     flex-wrap: wrap;
-    align-items: flex-end;
-    width: 325px;
+    /* align-items: flex-end; */
+    width: 340px;
 
     input {
       width: 100%;
@@ -346,17 +374,29 @@ align-items: flex-end;
       border: 1px solid #BCD0E5;
       border-radius: 4px;
       color: #FFFFFF;
+      margin: 25px 0;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 16px;
+      padding: 0;
+    }
+
+    input::placeholder {
+      padding-left: 10px;
+    }
+
+    input:focus {
+      outline: none;
     }
 
     button {
-      width: 131px;
-      height: 39px;
+      width: 180px;
+      height: 50px;
       background: #FF9900;
       color: #FFFFFF;
       font-size: 16px;
       font-weight: 700;
+      border: 1px solid #FF9900;
       border-radius: 4px;
-      margin-top: 21px;
     }
   }
 }
